# COACH

./: .gitignore  LICENSE  Optimization.md  README.md  pyproject.toml  requirements.txt
1_data_generation/: README.md  SIE4x4_h2o.out  compare_integrated_dv_tmp.py  extract_data.py  pyscf_integratedDV_matrices.txt  pyscf_integrated_dv.py  qchem_codes_insert.C
2_optimization/: README.md  analyze_results.py  build_data.py  build_training_data.py  run_mio.py  run_workflow.py  select_grid_constraints.py  template.yaml
2_optimization/coachopt/: __init__.py  analysis.py  constants.py  constraints.py  metadata.py  optimizer.py  physical_constraints.py  processing.py  select_diff_constraints.py  utils.py
2_optimization/template/: run_mio.yaml
2_optimization/templates/: Standard_errors.csv  dataset_eval.csv  dataset_info.csv  training_weights.csv
FunctionalCOACH/: 16_C_AE18.out  COACH.md  L14_2a.out  SIE4x4_h2o.out  __init__.py  coach_cos_d1.py  coach_css.py  coach_css_d1.py  coach_pyscf.py  coach_x_d1.py  reproduce_coach_pyscf.py
FunctionalCOACH/tests/: test_coach_regression.py
FunctionalCOACH/tests/qchem_outputs/: 16_C_AE18.out  L14_2a.out  SIE4x4_h2o.out
FunctionalCOACH/tests/xyzfiles/: 16_C_AE18.xyz  L14_2a.xyz  SIE4x4_h2o.xyz
example/: README.md
example/processed_data/: A_matrix.npy  A_matrix_dataset.pkl  b_vec.npy  b_vec_dataset.pkl  diff_75302.npy  diff_99590.npy  diff_constraint_99590.npy  name_list_training.txt  weight_vec.npy
example/pyscf_outputs/: 11_H_AE18.txt  12_He_AE18.txt  13_Li_AE18.txt  14_Be_AE18.txt  15_B_AE18.txt  16_C_AE18.txt  17_N_AE18.txt  18_O_AE18.txt  19_F_AE18.txt  20_Ne_AE18.txt  21_Na_AE18.txt  22_Mg_AE18.txt  23_Al_AE18.txt  24_Si_AE18.txt  25_P_AE18.txt  26_S_AE18.txt  27_Cl_AE18.txt  28_Ar_AE18.txt
example/runs/pass1/: betas_nonzero10.json  betas_nonzero10.npy  betas_nonzero6.json  betas_nonzero6.npy  betas_nonzero8.json  betas_nonzero8.npy  detailed_result.csv  representative_scan.csv  run_config.json
example/xyzfiles/: 11_H_AE18.xyz  12_He_AE18.xyz  13_Li_AE18.xyz  14_Be_AE18.xyz  15_B_AE18.xyz  16_C_AE18.xyz  17_N_AE18.xyz  18_O_AE18.xyz  19_F_AE18.xyz  20_Ne_AE18.xyz  21_Na_AE18.xyz  22_Mg_AE18.xyz  23_Al_AE18.xyz  24_Si_AE18.xyz  25_P_AE18.xyz  26_S_AE18.xyz  27_Cl_AE18.xyz  28_Ar_AE18.xyz
tests/: test_analysis.py  test_constraints.py  test_extract_data.py  test_metadata.py  test_processing.py  test_run_mio.py  test_select_grid_constraints.py  test_workflow_smoke.py
(+9 files in other folders)
